ULTIMA SUBIDA DE JUNIT
Al fin logré que todas las pruebas pasaran.
Actualmente uso maven para revisar que todo corra con el comando mvn clean test (se debe correr donde esté el pom)